fixed overlapsing credits lines

--- a/app/modules/welcome/scss/_welcome.scss
+++ b/app/modules/welcome/scss/_welcome.scss
@@ -45,13 +45,14 @@ section#social-networks{
 #credits{
   text-align: center;
   background-color: #010101;
-  padding: 1em;
+  padding: 2em;
   h5{
     color: #fefefe;
     margin: 1em;
   }
   p{
-    line-height: 0.2em;
+    line-height: 1.2em;
+    margin: 0.4em;
     color: #888;
   }
 }
